plex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: bapies-media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
      - name: plex
        image: plexinc/pms-docker:latest
        ports:
        - containerPort: 32400
        volumeMounts:
        - name: plex-config
          mountPath: /config
        - name: plex-media
          mountPath: /data
      volumes:
      - name: plex-config
        persistentVolumeClaim:
          claimName: plex-config-pvc
      - name: plex-media
        persistentVolumeClaim:
          claimName: plex-media-pvc
