plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: bapies-media
spec:
  type: ClusterIP
  ports:
  - port: 32400
    targetPort: 32400
    protocol: TCP
    name: plex
  selector:
    app: plex
